# branches

./: CHANGELOG.rst  README.rst  pyproject.toml
.github/workflows/: action.yml
docsrc/: conf.py  index.rst  intro.rst
docsrc/modules/: index.rst
src/phiarchitect/branches/: __init__.py  app.py  branches.py
