[project]
name = "phiarchitect-branches"
dynamic = ["version"]
authors = [
  { name="phi ARCHITECT", email="github@phiarchitect.com" },
]
description = "branching and merging"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "textual",
    "rich",
    "jinja2",
]

[project.scripts]
branches = "phiarchitect.branches.__main__:run"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["phiarchitect"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "phiarchitect.branches.__version__"}

[project.urls]
"Website" = "https://phiarchitect.github.io/branches"
"Repository" = "https://github.com/phiarchitect/branches"
"Issues" = "https://github.com/phiarchitect/branches/issues"